--- a/HabitTrackerApplication/webui/habit_tracker_application/src/style.css
+++ b/HabitTrackerApplication/webui/habit_tracker_application/src/style.css
@@ -32,10 +32,10 @@ body {
 
 .container2 {
     width: 100% !important;
-    padding: .5rem 18rem !important;
+    padding: .5rem 10.3rem !important;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     position: fixed;
     z-index: 1000;
     top: 3.6rem;
@@ -120,7 +120,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 80%;
+    width: 91%;
     font-weight: bold;
     padding: 1rem;
     height: 40px;
@@ -233,6 +233,8 @@ body {
 }
 
 /* *************************************************** */
+
+
 .form-label {
     text-transform: inherit;
     letter-spacing: inherit;
@@ -296,25 +298,29 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
     border-color: #7367f0 !important;
     box-shadow: 0 .125rem .375rem 0 rgba(115, 103, 240, .3);
     border: 0.375rem !important;
+    width: 46%;
 }
 
 .btn-success:hover {
     background-color: #6610f2 !important;
 }
 
-.btn-danger {
-    color: #fff !important;
-    background-color: #ff4c51 !important;
-    border-color: #ff4c51 !important;
-    box-shadow: 0 .125rem .375rem 0 rgba(115, 103, 240, .3);
-    border: 0.375rem !important;
+.closeBtn {
+    background-color: transparent;
+    border: none;
+    font-size: 1.2rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: 1rem;
+    margin-right: 1.5rem;
+    color: var(--text-color);
+
 }
 
-.btn-danger:hover {
-    background-color: #f13239 !important;
+.closeBtn:hover {
+    color: #90a2ca;
 }
-
-
 
 .rowItem {
     margin-left: 3rem;
@@ -365,9 +371,25 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 90vh;
-    overflow-y: auto;
-    scrollbar-width: none;
+    background-color: var(--bg-color);
+}
+
+.containerComponents {
+    background-color: var();
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 5rem;
+}
+
+.containerComponents .containerHabitItem {
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row !important;
 }
 
 .detail {
@@ -400,12 +422,16 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
     display: block !important;
 }
 
-.detail .butons {
+.butons {
     display: flex;
+    flex-direction: column !important;
     justify-content: space-between;
     align-items: center;
     margin-top: 1rem;
-    width: 100%;
+    width: 30%;
+    background-color: #28c76f;
+    gap: 2rem;
+    height: 300px;
 }
 
 
@@ -480,19 +506,18 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
 
 .default-layout .checkbox {
     margin-top: .5rem;
-    margin-left: .5rem;
-    width: 50px;
-    height: 50px;
+    margin-left: 1rem;
+    width: 35px;
+    height: 35px;
     border: none;
     cursor: pointer;
     position: absolute;
     top: 0;
     left: 0;
-    background-color: transparent;
+    background-color: var(--card-text) !important;
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
 .default-layout .checkbox span {
@@ -509,9 +534,10 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
     width: 100px;
 }
 
-.default-layout .checkbox:hover span {
-    display: inline-block;
 
+/* Checkbox işaretlendiğinde span gösterilsin */
+.default-layout .checkbox input[type="checkbox"]:checked+span {
+    display: inline-block;
 }
 
 .default-layout .checkbox input[type="checkbox"] {
@@ -519,7 +545,7 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
     height: 20px;
     border-radius: .267em !important;
     cursor: pointer;
-    border: 2px solid #76778e;
+    border: 1px solid #7267f0d7;
     background-color: transparent;
     display: flex;
     align-items: center;
@@ -535,7 +561,7 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
 }
 
 .default-layout .checkbox input[type="checkbox"]:focus {
-    border-color: #acabc1 !important;
+    border-color: #7267f0d7 !important;
     outline: 0 !important;
     box-shadow: none !important;
 }
@@ -558,9 +584,6 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
-
-
 
 .default-layout .Item {
     background-color: var(--bg-color);
@@ -600,14 +623,13 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
     background-color: transparent !important;
     color: var(--text-color) !important;
     width: 100%;
-    height: 200px !important;
+    height: 250px !important;
     display: flex;
     justify-content: center;
     align-items: flex-start;
     border: none !important;
     padding-left: 1rem;
-    margin-top: 3rem;
-    gap: 1rem;
+    gap: 1.7rem;
 
 }
 
@@ -627,6 +649,7 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
     margin-right: 1rem;
 }
 
+
 .default-layout .Item .edit {
     background-color: transparent !important;
     color: var(--text-color) !important;
@@ -644,6 +667,20 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: var(--card-text) !important;
+}
+
+.default-layout .Item .edit button:hover {
+    background-color: #887ff3 !important;
+}
+
+.default-layout .Item .edit button:hover i {
+    color: white !important;
+}
+
+
+.default-layout .Item .edit:hover~.bi-bar-chart {
+    display: inline-block !important;
 }
 
 
@@ -840,7 +877,7 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
 /* *************************  HabitItem Start ********************** */
 
 .alternative-layout .cardItem {
-    background-color: var(--primary-color) !important;
+    background-color: greenyellow !important;
     width: 100%;
     margin: 0 auto;
     color: var(--text-color) !important;
@@ -856,7 +893,7 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
     background-color: hotpink;
     border-radius: 5px;
     box-shadow: 4px 4px 10px 5px rgba(0, 0, 0, 0.3);
-    width: 100%;
+    width: 90%;
     height: 346px;
 }
 
