--- a/HabitTrackerApplication/webui/habit_tracker_application/src/style.css
+++ b/HabitTrackerApplication/webui/habit_tracker_application/src/style.css
@@ -62,6 +62,7 @@ body {
   --card-text: #e9e7fd;
   --flag: #ddf6e8;
   --calendar-event: #ffe2e3;
+  --calendar-border-color: #e6e6e8;
 }
 
 [data-theme="dark"] {
@@ -77,6 +78,7 @@ body {
   --card-text: #3a3b64;
   --flag: #2e4b4f;
   --calendar-event: #50374a;
+  --calendar-border-color: #44485e;
 }
 
 /* *******************************************************************/
@@ -405,7 +407,7 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #ff4c51 !important;
+  border-bottom: 1px solid var(--text-color) !important;
   margin-bottom: 1rem;
 }
 
@@ -423,16 +425,18 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
 
 
 .note-pad {
-  background-color: #897ff394 !important;
+  background-color: transparent !important;
   border: none !important;
   padding: 1rem;
   position: relative;
-  background-size: 100% 55px !important;
+  background-size: 100% 59px !important;
   background-position: top;
   background-repeat: repeat;
   width: 100%;
-  background-image: linear-gradient(to bottom, transparent 50%, #e8e8e8 50%);
+  background-image: linear-gradient(to bottom, var(--primary-color) 50%, var(--primary-color) 50%) !important;
   height: auto !important;
+  border-radius: 5px !important;
+
 }
 
 .note-list {
@@ -447,7 +451,6 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
   margin-bottom: 0.5rem;
   background: red !important;
   border: none !important;
@@ -469,8 +472,9 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   margin-left: 1rem;
   margin-right: 1rem;
   font-size: 1.2rem;
-  background-color: #28c76f !important;
+  background-color: transparent !important;
   width: 100% !important;
+  color: var(--text-color) !important;
 }
 
 .delete-btn {
@@ -486,23 +490,6 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
 .delete-btn:hover {
   background-color: #f7444a;
 }
-
-.update-btn {
-  color: var(--text-color) !important;
-  background-color: var(--card-text) !important;
-  border: none;
-  padding: 0.3rem 0.6rem;
-  font-size: 0.9rem;
-  cursor: pointer;
-  width: 5%;
-  margin-right: 1rem;
-}
-
-.update-btn:hover {
-  background-color: #887ff3 !important;
-  color: white !important;
-}
-
 
 .modal-footer {
   display: flex;
@@ -608,26 +595,114 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
 
 
 /* ******************** Calendar Start ********************** */
+
+/* Haftanın her bir günü */
 .calendar {
-  padding: 1rem;
-  width: 70%;
-  text-align: center;
+  width: 100%;
+  margin: 0 auto;
+  border: none !important;
+  border-radius: 5px;
+  margin-top: 2rem;
+  box-shadow: 0 0.125rem 0.375rem 0 rgba(114, 103, 240, 0.507);
+  background-color: var(--bg-color) !important;
+}
+
+.calendar h3 {
+  margin: 0 auto;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
   color: var(--text-color);
 }
 
-.calendar-grid {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  gap: 10px;
+.fc-button-group {
+  position: relative;
+  vertical-align: middle;
+  background-color: var(--bg-color) !important;
+  border: none !important;
+  margin-left: 3rem;
 }
 
-.calendar-day {
-  text-align: center;
-  padding: 10px;
-  border-radius: 5px;
-  background-color: var(--bg-color);
-  box-shadow: 4px 4px 10px 5px rgba(0, 0, 0, 0.3);
+.fc .fc-button-primary {
+  background-color: transparent;
+  color: var(--text-color);
+  border: none !important;
 }
+
+.fc .fc-button-primary:hover {
+  background-color: #4454c3;
+  color: white;
+  border: none !important;
+}
+
+.fc .fc-button-primary:focus {
+  background-color: var(--bg-color) !important;
+  color: var(--text-color) !important;
+  border: none !important;
+}
+
+.fc-toolbar-title {
+  color: var(--text-color);
+
+}
+
+.fc-header-toolbar {
+  justify-content: flex-start !important;
+}
+
+.fc-scrollgrid-sync-inner {
+  color: var(--text-color) !important;
+  border: none !important;
+}
+
+.fc-scrollgrid-sync-inner a {
+  color: var(--text-color) !important;
+  text-decoration: none !important;
+  font-size: 1rem;
+  font-weight: 100;
+}
+
+
+.fc-today-button {
+  display: none !important;
+}
+
+.fc-dayGridMonth-button {
+  display: none !important;
+}
+
+
+.fc-daygrid-day-top {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: left !important;
+  padding: 1rem !important;
+}
+
+.fc-daygrid-day-number {
+  font-size: 1em !important;
+  color: var(--text-color) !important;
+}
+
+.fc table.fc-scrollgrid {
+  border-color: #44485e !important;
+  border-top-color: var(--calendar-border-color) !important;
+  border-bottom-width: 0px;
+  border-collapse: separate;
+  border-right-width: 0px;
+  border-left-width: 0px;
+}
+
+.fc table,
+.fc-view-harness,
+.fc-dayGridMonth-view,
+.fc .fc-timegrid-axis,
+.fc tbody,
+.fc thead,
+.fc tbody td,
+.fc th {
+  border-color: var(--calendar-border-color) !important;
+}
+
 
 /* ******************** Calendar End ************************ */
 
