--- a/HabitTrackerApplication/webui/habit_tracker_application/src/style.css
+++ b/HabitTrackerApplication/webui/habit_tracker_application/src/style.css
@@ -219,17 +219,23 @@ body {
   width: 100% !important;
 }
 
-/* Offcanvas Düzeni */
-.offcanvas {
-  z-index: 1055;
-  max-width: 400px;
-  background-color: var(--bg-color) !important;
-  box-shadow: 0.25rem 1.125rem 0 rgba(19, 17, 32, 0.22);
-  color: var(--text-color) !important;
+.modal-dialog {
+  transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+  transform: translateY(-50px);
+  opacity: 0;
 }
 
-.offcanvas-backdrop {
-  background-color: rgba(0, 0, 0, 0.63);
+.modal.fade.show .modal-dialog {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.modal-backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  background-color: var(--bg-color) !important;
 }
 
 /* *************************************************** */
@@ -316,16 +322,18 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   background-color: #6610f2 !important;
 }
 
+
 .closeBtn {
   background-color: transparent;
   border: none;
-  font-size: 1.2rem;
+  font-size: 1.3rem !important;
   position: absolute;
   top: 0;
   right: 0;
   margin-top: 1rem;
   margin-right: 1.5rem;
   color: var(--text-color);
+  font-weight: bold;
 }
 
 .closeBtn:hover {
@@ -962,7 +970,6 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   width: 100%;
   padding: 0;
   height: 110vh;
-
 }
 
 .default-layout .stat-item2 {
@@ -979,12 +986,14 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   background-color: var(--bg-color) !important;
   color: var(--text-color) !important;
   border: none !important;
-  box-shadow: 4px 4px 10px 5px rgba(0, 0, 0, 0.3);
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0 !important;
+  box-shadow: 0 0.125rem 0.375rem 0 rgba(114, 103, 240, 0.507);
+
 }
+
 
 .default-layout .stat-item3 h5 {
   margin-top: 1rem;
