--- a/HabitTrackerApplication/webui/habit_tracker_application/src/style.css
+++ b/HabitTrackerApplication/webui/habit_tracker_application/src/style.css
@@ -411,12 +411,6 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
 }
 
 
-
-
-
-
-
-
 /* ********************************************************** */
 .detailPage {
   display: flex;
@@ -469,8 +463,8 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   cursor: pointer;
 }
 
-
 .note-pad {
+  margin-top: 2rem;
   background-color: transparent !important;
   border: none !important;
   padding: 1rem;
@@ -479,10 +473,16 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   background-position: top;
   background-repeat: repeat;
   width: 100%;
-  background-image: linear-gradient(to bottom, var(--primary-color) 50%, var(--primary-color) 50%) !important;
+  background-image: linear-gradient(to bottom, var(--bg-color) 50%, var(--bg-color) 50%) !important;
   height: auto !important;
   border-radius: 5px !important;
-
+  /* Scrollbar ve kaydırma için eklenenler */
+  max-height: 300px;
+  /* Maksimum yüksekliği sınırla */
+  overflow-y: auto;
+  /* Yatay kaydırma sadece içerik taşarsa */
+  overflow-x: hidden;
+  /* Yatay kaydırmayı gizle */
 }
 
 .note-list {
@@ -498,7 +498,7 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 0.5rem;
-  background: red !important;
+  background: transparent !important;
   border: none !important;
   border-radius: 5px;
   position: relative;
@@ -582,6 +582,18 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   border: none !important;
 }
 
+.containerHabitItem2 {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column !important;
+  padding: 1rem;
+  box-shadow: 0 0.125rem 0.375rem 0 rgba(115, 103, 240, 0.3);
+  background-color: var(--bg-color) !important;
+  border: none !important;
+}
+
 .content {
   background: transparent;
   padding: 20px;
@@ -591,6 +603,18 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   height: 310px;
   color: var(--text-color);
   margin-top: 2rem;
+}
+
+.content2 {
+  background: var(--bg-color) !important;
+  border-radius: 8px;
+  width: 100%;
+  height: auto;
+  color: var(--text-color);
+  display: flex !important;
+  flex-direction: column !important;
+  margin: 0 auto !important;
+  text-align: left !important;
 }
 
 .detail {
@@ -626,18 +650,40 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
 .contentButon {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
-.content h4 {
+.messageBox {
+  background-color: transparent !important;
+  border-radius: 8px;
+  padding: 1rem;
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: center !important;
+  gap: 1rem;
+  height: 60px;
+  border: 1px solid #897ff352;
+
+}
+
+.content2 input {
+  border: none !important;
+  width: 90% !important;
+  background-color: transparent;
   color: var(--text-color);
+  outline: none;
 }
 
-.content textarea {
-  height: 150px;
-  margin-bottom: 1rem !important;
+.content2 input::placeholder {
+  color: var(--text-color);
+  /* Placeholder yazı rengi */
+  opacity: .5;
+  /* Yazının görünürlüğü tam olsun */
 }
 
+.content2 input:focus {
+  border: none !important;
+}
 
 /* ******************** Calendar Start ********************** */
 .totalDays {
@@ -647,14 +693,22 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
 
 /* Haftanın her bir günü */
 .calendar {
-  width: 40%;
-  margin: 0 auto;
+  width: 100%;
   border: none !important;
   border-radius: 5px;
   margin-top: 2rem;
   box-shadow: 0 0.125rem 0.375rem 0 rgba(114, 103, 240, 0.507);
   background-color: var(--bg-color) !important;
 
+}
+
+.vc-day-content {
+  font-size: 1.2rem !important;
+}
+
+.vc-weekday {
+  font-size: 1.2rem !important;
+  text-decoration: underline;
 }
 
 .vc-container {
@@ -710,7 +764,7 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   transform: translate(-50%, -50%);
   color: rgb(44, 202, 44);
   /* Yeşil renk */
-  font-size: 1.5rem;
+  font-size: 1.9rem;
 }
 
 
@@ -950,26 +1004,31 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   width: 100%;
   color: var(--text-color);
   text-align: center;
+
 }
 
 .default-layout .stats {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   height: auto;
   gap: 2rem;
   width: 100% !important;
-  height: 110vh;
+  height: auto;
+  margin-bottom: 3rem;
 }
 
 .default-layout .stat-item1 {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  width: 100%;
+  justify-content: flex-start;
+  flex-direction: column !important;
+  width: 30%;
   padding: 0;
-  height: 110vh;
+  height: auto;
+  background-color: transparent;
+  gap: 2rem;
 }
 
 .default-layout .stat-item2 {
@@ -978,40 +1037,74 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   color: var(--text-color) !important;
   border: none !important;
   box-shadow: 0 0.125rem 0.375rem 0 rgba(114, 103, 240, 0.507);
+  padding-top: 2rem !important;
 }
 
 .default-layout .stat-item3 {
   width: 100%;
-  height: 570px !important;
+  height: auto !important;
   background-color: var(--bg-color) !important;
   color: var(--text-color) !important;
   border: none !important;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 !important;
+  padding: 1.5rem !important;
   box-shadow: 0 0.125rem 0.375rem 0 rgba(114, 103, 240, 0.507);
 
 }
-
 
 .default-layout .stat-item3 h5 {
   margin-top: 1rem;
   margin-bottom: 0.5rem;
 }
 
-.default-layout .stat-item3 .value {
-  width: 70px;
-  border-radius: 100%;
-  margin: 0 auto;
-  margin-bottom: 0.5rem;
-  font-size: 4rem;
+.default-layout .stat-item4 {
+  display: flex;
+  align-items: center;
+  justify-content: centert;
+  width: 70%;
+  padding: 0;
+  height: 100% !important;
+  background-color: transparent !important;
+}
+
+.ColumnChart {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  margin: 0 auto !important;
+}
+
+.highcharts-background {
+  fill: transparent !important;
+
+}
+
+.highcharts-xaxis {
+  display: none !important;
+}
+
+.highcharts-grid-line {
+  display: none !important;
+}
+
+text {
+  fill: var(--text-color) !important;
+  font-size: 13px !important;
+}
+
+.highcharts-label-box {
+  fill: var(--primary-color) !important;
 }
 
 .default-layout .value {
   width: 70px;
   margin: 0 auto;
   border-radius: 100%;
+  background-color: var(--card-text) !important;
+  box-shadow: 0 0.125rem 0.375rem 0 rgba(114, 103, 240, 0.507);
+
 }
 
 .default-layout .day {
@@ -1095,11 +1188,12 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
 }
 
 .default-layout .rate {
-  width: 25%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 1rem;
 }
 
 /* ************************ Güncel Seri **************************** */
@@ -1107,8 +1201,10 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
 .default-layout .currentSeries {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  width: 25%;
+  justify-content: center;
+  width: 100%;
+  box-shadow: 0 0.125rem 0.375rem 0 rgba(114, 103, 240, 0.507);
+  padding: 1.3rem 0rem;
 }
 
 /* ******************************************************** */
@@ -1123,9 +1219,11 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
 .default-layout .longest {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
+  flex-direction: column !important;
   width: 100%;
-  gap: 2rem;
+  gap: .5rem;
+
 }
 
 .default-layout .stats p {
